Fix author column overflowing into commit message; Increase author column width

--- a/default.css
+++ b/default.css
@@ -226,7 +226,8 @@ table.shortlog {
     }
 
     table.shortlog .author {
-        width: 150px;
+        overflow: hidden;
+        width: 200px;
     }
 
     table.shortlog .message {
